Fixed line spacing

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -55,6 +55,7 @@ body, html {
   text-align: justify;
   margin-bottom: 15px;
   font-family: 'Open Sans';
+  line-height: 1.2;
   color: #ccc;
 }
 
